--- a/index.html
+++ b/index.html
@@ -26,21 +26,6 @@
     <p>My interest is to read some book whenever I am borad at home. My passions is that I like to sleep. I like something about CS is that I like to make new project in Web Program. My strengths is that I am better doing the code in Web Program because I like to create some website in Computer Science.</p>
     <!-- Use comments like these to remove any courses that you have not yet taken.  Make sure to delete any projects you aren't putting in. -->
   
-    <h3>Computational Art Projects</h3><br>
-    <div class="row">
-      <div class="col-sm">
-        <h4>Project Title</h4>
-        <p><a href="replit.com">Link to project</a></p>
-        <p>Write a description of your project here.  Also state what skills or knowledge it demonstrates.</p>
-      </div>
-      <div class="col-sm">
-        <h4>Project Title</h4>
-        <p><a href="replit.com">Link to project</a></p>
-        <p>Write a description of your project here.  Also state what skills or knowledge it demonstrates.</p>
-      </div>
-    </div>
-  </div><br>
-  
   <div class="container-fluid bg-3 text-center">    
     <h3>Exploring Computer Science Projects</h3><br>
     <div class="row">
@@ -57,7 +42,7 @@
     </div>
   </div><br>
 
-  <div class="container-fluid bg-3 text-center">    
+ <!-- <div class="container-fluid bg-3 text-center">    
     <h3>Designing Software for the Web Projects</h3><br>
     <div class="row">
       <div class="col-sm">
@@ -73,7 +58,7 @@
         <p>Write a description of your project here.  Also state what skills or knowledge it demonstrates.</p>
       </div>
     </div>
-  </div><br>
+  </div><br> -->
 
   <div class="container-fluid bg-3 text-center">    
     <h3>AP Computer Science A Projects</h3><br>
@@ -91,7 +76,7 @@
     </div>
   </div><br>
 
-  <div class="container-fluid bg-3 text-center">    
+ <!-- <div class="container-fluid bg-3 text-center">    
     <h3>iOS Mobile Programming Projects</h3><br>
     <div class="row">
       <div class="col-sm">
@@ -109,34 +94,8 @@
         <p>Write a description of your project here.  Also state what skills or knowledge it demonstrates.</p>
       </div>
     </div>
-  </div><br>
-
-  <div class="container-fluid bg-3 text-center">    
-    <h3>CS Academy Service Learning Project</h3><br>
-    <div class="row">
-      <div class="col-sm">
-        <h4>Project Title</h4>
-        <p><a href="replit.com">Link to project</a></p>
-        <p>Write a description of your project and the process of developing it as a team here.  Also state what skills or knowledge you acquired during the process.</p>
-      </div>
-    </div><br>
-  
-  <div class="container-fluid bg-3 text-center">    
-    <h3>Other Projects</h3><br>
-    <div class="row">
-      <div class="col-sm">
-        <h4>Project Title</h4>
-        <p><a href="replit.com">Link to project</a></p>
-        <p>Write a description of your project here.  Also state what skills or knowledge it demonstrates.</p>
-      </div>
-      <div class="col-sm">
-        <h4>Project Title</h4>
-        <p><a href="replit.com">Link to project</a></p>
-        <p>Write a description of your project here.  Also state what skills or knowledge it demonstrates.</p>
-      </div>
-    </div>
-  </div>
-  
+  </div><br> -->
+    
   <br><br>
   <!-- Leave this section commented until you are a senior and have talked with your CS teacher and parents.
   <footer class="container-fluid text-center p-2">
