--- a/index.html
+++ b/index.html
@@ -25,8 +25,23 @@
     <p>Write a few sentences about you.  What are your interests and passions?  What do you like about CS?  What are your strengths?  Market yourself to future employers/funders.  Remember to proofread your writing.</p>
     <p>My interest is to read some book whenever I am borad at home. My passions is that I like to sleep. I like something about CS is that I like to make new project in Web Program. My strengths is that I am better doing the code in Web Program because I like to create some website in Computer Science.</p>
     <!-- Use comments like these to remove any courses that you have not yet taken.  Make sure to delete any projects you aren't putting in. -->
+
+<h3>Computational Art Projects</h3><br>
+    <div class="row">
+      <div  class="col-sm">
+        <h4>Project Title</h4>
+        <p><a href="replit.com">Link to project</a></p>
+        <p>Write a description of your project here. Also state what skills or knowledge it demonstrates.</p>
+      </div>
+      <div class="col-sm">
+        <h4>Projects Title</h4>
+        <p><a href="replit.com">Link to project</p>
+         <p>Write a description of your project here. Also state what skills or knowledge it demonstrates.</p>
+      </div>
+    </div>
+  </div><br>
   
-  <div class="container-fluid bg-3 text-center">    
+ <div class="container-fluid bg-3 text-center">    
     <h3>Exploring Computer Science Projects</h3><br>
     <div class="row">
       <div class="col-sm">
@@ -40,8 +55,8 @@
         <p>Write a description of your project here.  Also state what skills or knowledge it demonstrates.</p>
       </div>
     </div>
-  </div><br>
-
+  </div><br> 
+  
  <!-- <div class="container-fluid bg-3 text-center">    
     <h3>Designing Software for the Web Projects</h3><br>
     <div class="row">
@@ -94,8 +109,20 @@
         <p>Write a description of your project here.  Also state what skills or knowledge it demonstrates.</p>
       </div>
     </div>
+  </div><br> 
+
+<div class="container-fluid bg-3 text-center">
+  <h3>CS Academy Service Learning Project</h3><br>
+  <div class="row">
+    <div class="col-sm">
+      <h4>Project Title</h4>
+      <p><a href="replit.com">Link to project</a></p><
+       <p>Write a description of your project here.  Also state what skills or knowledge you acqire.</p>
+    </div>
   </div><br> -->
-    
+
+  <div class
+        
   <br><br>
   <!-- Leave this section commented until you are a senior and have talked with your CS teacher and parents.
   <footer class="container-fluid text-center p-2">
