--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
 
 <body>
   <div class="container-fluid bg-3 text-center">    
-    <h1>Larissa Arellano's CS Project Portfolio</h1>      
-    <p>Write a few sentences about you.  What are your interests and passions?  What do you like about CS?  What are your strengths?  Market yourself to future employers/funders.  Remember to proofread your writing.</p>
-    <p>My interest is to read some book whenever I am borad at home. My passions is that I like to sleep. I like something about CS is that I like to make new project in Web Program. My strengths is that I am better doing the code in Web Program because I like to create some website in Computer Science.</p>
+    <h1>Larissa Arellano's CS Project Portfolio</h1>
+    <p>My interest is to read some book at Summer because I am borad at home. My passions is that I like to sleep in afternoon for 1 hour. I like something about CS is that I like to make new project in Designing Software for the Web Projects. My strengths is that I am better doing the code in Designing Software for the Web Projects because I like to create some website in Computer Science class.</p>
     <!-- Use comments like these to remove any courses that you have not yet taken.  Make sure to delete any projects you aren't putting in. -->
 
 <h3>Computational Art Projects</h3><br>
