--- a/index.html
+++ b/index.html
@@ -24,21 +24,6 @@
     <h1>Larissa Arellano's CS Project Portfolio</h1>
     <p>My interest is to read some book at Summer because I am borad at home. My passions is that I like to sleep in afternoon for 1 hour. I like something about CS is that I like to make new project in Designing Software for the Web Projects. My strengths is that I am better doing the code in Designing Software for the Web Projects because I like to create some website in Computer Science class.</p>
     <!-- Use comments like these to remove any courses that you have not yet taken.  Make sure to delete any projects you aren't putting in. -->
-
-<h3>Computational Art Projects</h3><br>
-    <div class="row">
-      <div  class="col-sm">
-        <h4>Project Title</h4>
-        <p><a href="replit.com">Link to project</a></p>
-        <p>Write a description of your project here. Also state what skills or knowledge it demonstrates.</p>
-      </div>
-      <div class="col-sm">
-        <h4>Projects Title</h4>
-        <p><a href="replit.com">Link to project</p>
-         <p>Write a description of your project here. Also state what skills or knowledge it demonstrates.</p>
-      </div>
-    </div>
-  </div><br>
   
  <div class="container-fluid bg-3 text-center">    
     <h3>Exploring Computer Science Projects</h3><br>
@@ -120,8 +105,19 @@
     </div>
   </div><br> -->
 
-  <div class
-        
+    <!--
+  <div class="container-flueid bg-3 text-center">
+    <h3>Other Projects</h3><br>
+    <div class="row">
+    <div class="col-sm">
+<h4>Project Tilte</h4>
+    <p><a href="replit.com">Link to Project</a></p> 
+      <p>Write a  description of your project here.  Also state what skills or knowledge it demonstrates.</p>
+    </div>
+    </div>
+  </div>
+ -->
+    
   <br><br>
   <!-- Leave this section commented until you are a senior and have talked with your CS teacher and parents.
   <footer class="container-fluid text-center p-2">
@@ -132,7 +128,7 @@
   <!--
       <p>GitHub: <a href="yourGitHubProfileLink">Your Name as it appears on GitHub</a></p>
     </address>
-  </footer>
+  </footer> 
 -->
   <script src="script.js"></script>
 </body>
