--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
     <h3>Designing Software for the Web Projects</h3><br>
     <div class="row">
       <div class="col-sm">
-        <h4>Project Title</h4>
+        <h4>Happy Emoji that eat the random letter</h4>
         <p><a href="replit.com">Link to code on GitHub</a></p>
-        <p><a href="replit.com">Website</a></p>
-        <p>Write a description of your project here.  Also state what skills or knowledge it demonstrates.</p>
+        <p><a href="https://github.com/Larjunesummer2006/Happy-Emoji-that-eat-the-random-letter">Website</a></p>
+        <p>It was a game that the emoji was to collect the letter that was like a screch words. The skill was that the emoji was moving in the sheach word to eat the random letter.</p>
       </div>
       <div class="col-sm">
-        <h4>Project Title</h4>
-        <p><a href="replit.com">Link to code on GitHub</a></p>
-        <p><a href="replit.com">Website</a></p>
-        <p>Write a description of your project here.  Also state what skills or knowledge it demonstrates.</p>
+        <h4>Word</h4>
+        <p><a href="https://github.com/Larjunesummer2006/Word">Link to code on GitHub</a></p>
+        <p><a href="https://github.com/Larjunesummer2006/Word">Website</a></p>
+        <p>The word that the emoji was to eat the letter or word. The skill was to make sure that the emoji eatb the word or the letter while playing the game.</p>
       </div>
     </div>
   </div><br> 
@@ -63,19 +63,16 @@
     <h3>AP Computer Science A Projects</h3><br>
     <div class="row">
       <div class="col-sm">
-        <h4>Project Title</h4>
-        <p><a href="replit.com">Link to project</a></p>
-        <p>Write a description of your project here.  Also state what skills or knowledge it demonstrates.</p>
+        <h4>Maze Game</h4>
+        <p><a href="https://codehs.com/sandbox/id/game-96s8Ch">Link to project</a></p>
+        <p>The player is moving in the Maze Game. The skill was that the player was abpout to hit the circle that was the coin.</p>
       </div>
       <div class="col-sm">
-        <h4>Project Title</h4>
-        <p><a href="replit.com">Link to project</a></p>
-        <p>Write a description of your project here.  Also state what skills or knowledge it demonstrates.</p>
       </div>
     </div>
   </div><br>
 
-  <div class="container-fluid bg-3 text-center">    
+<!--  <div class="container-fluid bg-3 text-center">    
     <h3>iOS Mobile Programming Projects</h3><br>
     <div class="row">
       <div class="col-sm">
@@ -94,6 +91,7 @@
       </div>
     </div>
   </div><br> 
+    -->
 
 <!--   <div class="container-fluid bg-3 text-center">
   <h3>CS Academy Service Learning Project</h3><br>
