--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p>My interest is to read some book at Summer because I am borad at home. My passions is that I like to sleep in afternoon for 1 hour. I like something about CS is that I like to make new project in Designing Software for the Web Projects. My strengths is that I am better doing the code in Designing Software for the Web Projects because I like to create some website in Computer Science class.</p>
     <!-- Use comments like these to remove any courses that you have not yet taken.  Make sure to delete any projects you aren't putting in. -->
   
- <div class="container-fluid bg-3 text-center">    
+<!-- <div class="container-fluid bg-3 text-center">    
     <h3>Exploring Computer Science Projects</h3><br>
     <div class="row">
       <div class="col-sm">
@@ -40,13 +40,13 @@
       </div>
     </div>
   </div><br> 
-  
+  -->
  <div class="container-fluid bg-3 text-center">    
     <h3>Designing Software for the Web Projects</h3><br>
     <div class="row">
       <div class="col-sm">
         <h4>Happy Emoji that eat the random letter</h4>
-        <p><a href="replit.com">Link to code on GitHub</a></p>
+        <p><a href="https://github.com/Larjunesummer2006/Happy-Emoji-that-eat-the-random-letter">Link to code on GitHub</a></p>
         <p><a href="https://github.com/Larjunesummer2006/Happy-Emoji-that-eat-the-random-letter">Website</a></p>
         <p>It was a game that the emoji was to collect the letter that was like a screch words. The skill was that the emoji was moving in the sheach word to eat the random letter.</p>
       </div>
